0.10.0/_sources/developers_guide/ocean/generated/polaris.tasks.ocean.sphere_transport.mixing_analysis.MixingAnalysis.rst.txt
polaris.tasks.ocean.sphere\_transport.mixing\_analysis.MixingAnalysis
=====================================================================

.. currentmodule:: polaris.tasks.ocean.sphere_transport.mixing_analysis

.. autoclass:: MixingAnalysis

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~MixingAnalysis.__init__
      ~MixingAnalysis.add_dependency
      ~MixingAnalysis.add_input_file
      ~MixingAnalysis.add_output_file
      ~MixingAnalysis.check_properties
      ~MixingAnalysis.constrain_resources
      ~MixingAnalysis.process_inputs_and_outputs
      ~MixingAnalysis.run
      ~MixingAnalysis.runtime_setup
      ~MixingAnalysis.set_resources
      ~MixingAnalysis.set_shared_config
      ~MixingAnalysis.setup
      ~MixingAnalysis.validate_baselines
   
   

   
   
   