1.0.0/_sources/developers_guide/ocean/generated/polaris.tasks.ocean.sphere_transport.mixing_analysis.MixingAnalysis.rst.txt
polaris.tasks.ocean.sphere\_transport.mixing\_analysis.MixingAnalysis
=====================================================================

.. currentmodule:: polaris.tasks.ocean.sphere_transport.mixing_analysis

.. autoclass:: MixingAnalysis

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~MixingAnalysis.__init__
      ~MixingAnalysis.add_dependency
      ~MixingAnalysis.add_horiz_mesh_input_file
      ~MixingAnalysis.add_init_input_file
      ~MixingAnalysis.add_input_file
      ~MixingAnalysis.add_output_file
      ~MixingAnalysis.add_output_files_for_ocean_model_input
      ~MixingAnalysis.add_vert_coord_input_file
      ~MixingAnalysis.check_properties
      ~MixingAnalysis.constrain_resources
      ~MixingAnalysis.get_horiz_mesh_filename
      ~MixingAnalysis.get_init_filename
      ~MixingAnalysis.get_vert_coord_filename
      ~MixingAnalysis.map_from_native_model_vars
      ~MixingAnalysis.map_to_native_model_vars
      ~MixingAnalysis.open_model_dataset
      ~MixingAnalysis.open_vert_coord_dataset
      ~MixingAnalysis.process_inputs_and_outputs
      ~MixingAnalysis.run
      ~MixingAnalysis.runtime_setup
      ~MixingAnalysis.set_resources
      ~MixingAnalysis.set_shared_config
      ~MixingAnalysis.setup
      ~MixingAnalysis.validate_baselines
      ~MixingAnalysis.write_horiz_mesh_dataset
      ~MixingAnalysis.write_initial_state_dataset
      ~MixingAnalysis.write_model_dataset
      ~MixingAnalysis.write_vert_coord_dataset
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~MixingAnalysis.component
      ~MixingAnalysis.config
      ~MixingAnalysis.input_data
   
   